VERIFY_INTERFACE_HEADER_SETS: Add verification target for all

Fixes: #23802